<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            />

        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cedula"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Cedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            />

        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/Direcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clave"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmarClave"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/confirmarClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />
    </LinearLayout>

</LinearLayout>