<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/descripcionConsultorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/direccionConsultorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        style=" @style/FormItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            />
        <EditText
            style=" @style/FormText.Editable"
            android:id="@+id/telefonoConsultorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <Button
        android:id="@+id/crearConsultorioBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        />
    </LinearLayout>
</LinearLayout>