<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TADIA"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efTAD"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sistolica"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efSis"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FRECardiaca"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efFreCar"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FRERESP"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efFreRes"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PESO"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efPeso"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"

                />

        </LinearLayout>
        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Talla"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efTalla"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            style=" @style/FormItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMC"
                android:layout_weight="100"
                />
            <EditText
                style=" @style/FormText.Editable"
                android:id="@+id/efIMC"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:editable="false"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>